Feat: 제목 변경(Baek's Travel → SGSB Travel)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
-    <title>Beak's Travel</title>
+    <title>SGSB Travel</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -27,7 +27,7 @@
         </div>
         <div class="project-information">
             <div class="project-introduction">
-                <p id="teamName">Baek's Travel</p>
+                <p id="teamName">SGSB Travel</p>
                 <h1 id="projectName" onclick="window.open('https://github.com/wodnjse/SGSB-travel')">서경속부</h1>
                 <p id="introduction">국내 대표 명소를 한눈에.</p>
             </div>
@@ -59,6 +59,7 @@
                             <h3 class="main-city-card-title">서울</h3>
                             <div class="main-city-card-desc">한국의 심장</div>
                         </div>
+                        <!-- <img id="imgSeoul" src="./img/photo-1597548898542-78eeb7bfaf40.avif" loading="lazy"> -->
                         <div class="fade">
                             <h2 class="fade-title">아름다운 야경, N서울타워</h2>
                             <p class="fade-desc">남산서울타워는 대한민국 서울특별시 용산구 용산동2가 남산 정상 부근에 위치한 전파 송출 및 관광용 타워입니다. 1969년에
